--- a/src/index/public/css/01login-registro.css
+++ b/src/index/public/css/01login-registro.css
@@ -1,3 +1,4 @@
+/* Estilos globais */
 body {
     margin: 0;
     padding: 0;
@@ -9,9 +10,9 @@ body {
     animation: fadeIn 2s;
     overflow: hidden;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
 }
 
+/* Estilos do formulário */
 form {
     position: absolute;
     right: 150px;
@@ -39,7 +40,6 @@ form a {
     border: 1px solid #ccc;
     font-size: 16px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
     transition: all 0.3s ease;
 }
 
@@ -105,6 +105,7 @@ form:hover h2 {
     font-size: 16px;
 }
 
+/* Animação de fadeIn */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -114,18 +115,14 @@ form:hover h2 {
     }
 }
 
-.error-message {
-    font-size: 18px;
-    color: red;
-    margin-bottom: 10px;
-}
+/* Estilos do botão administrativo */
 .adm-button {
     position: fixed;
     bottom: 20px;
     right: 20px;
     width: 60px;
     height: 60px;
-    border: 1px solid #000000;
+    border: 1px solid #ffffff;
     border-radius: 50%;
     overflow: hidden;
     background: linear-gradient(45deg, #0d5d93, #1394e9);
@@ -135,9 +132,9 @@ form:hover h2 {
 }
 
 .adm-button:hover {
-    border-color: #1a0303;
-    transform: scale(1.1);
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+    border-color: #ffffff;
+    transition: 0.3s;
+    transform: scale(1.0);
 }
 
 .adm-button img {
@@ -178,6 +175,7 @@ form:hover h2 {
     animation: none;
 }
 
+/* Estilos do modal */
 .modal {
     display: none;
     position: fixed;
@@ -212,7 +210,8 @@ form:hover h2 {
 .modal button:hover {
     background: #308cca;
 }
-/* Estilos do modal e fundo desfocado */
+
+/* Estilos do fundo desfocado do modal */
 .modal-background {
     display: none;
     position: fixed;
@@ -224,6 +223,7 @@ form:hover h2 {
     backdrop-filter: blur(5px);
     z-index: 998;
 }
+
 .close-button {
     position: absolute;
     top: 5px;
@@ -235,6 +235,7 @@ form:hover h2 {
     border: none;
 }
 
+/* Estilos do fundo */
 .bg {
     display: flex;
     align-items: center;
@@ -263,22 +264,21 @@ form:hover h2 {
     z-index: -1; /* Para colocar o pseudo-elemento atrás do conteúdo da .bg */
 }
 
-
-
+/* Estilos do logo */
 .logo {
     position: absolute;
     bottom: 240px;
     width: 250px; /* ajuste conforme necessário */
     height: 250px;
-    
 }
 
 .logo img {
     width: 30px; /* ajuste conforme necessário */
-    height: 20px;}
+    height: 20px;
+}
 
+/* Outros estilos */
 .title {
-    
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #fff;
     padding: 50px;
@@ -289,13 +289,14 @@ form:hover h2 {
 
 .website {
     position: absolute;
-    bottom:5px;
+    bottom: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #fff;
     font-size: 15px;
     font-weight: lighter;
 }
 
+/* Estilos da imagem de fundo */
 .img-bg {
     opacity: 0.2; /* Valor entre 0 (totalmente transparente) e 1 (totalmente opaco) */
     width: 100%; /* Ajuste conforme necessário */
@@ -308,9 +309,66 @@ form:hover h2 {
     left: 0;
 }
 
+/* Texto de direitos autorais */
 .rights {
     position: absolute;
     bottom: -10px;
     font-size: 12px;
     font-weight: lighter;
+}
+@media only screen and (max-width: 600px) {
+    form {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content:center ;
+        right: 2%;
+        width: 80%;
+        padding: 5%;
+    }
+
+    form input,
+    form button,
+    form a {
+        width: 90%;
+        padding: 10px;
+        margin-bottom: 5px;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+        transition: all 0.3s ease;
+    }
+
+    form input:focus {
+        outline: none;
+        border-color: #1c86cd;
+        box-shadow: 0 0 8px 0 #1c86cd;
+    }
+
+    form button {
+        font-size: 14px;
+    }
+
+    .adm-button {
+        bottom: 10%;
+        right: 5%;
+        width: 40px;
+        height: 40px;
+    }
+
+    .bg,
+    .bg::before,
+    .logo {
+        width: 100%;
+    }
+
+    .logo {
+        max-width: none;
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .rights {
+        font-size: 10px;
+    }
 }
