--- a/src/index/public/css/02index-biblio.css
+++ b/src/index/public/css/02index-biblio.css
@@ -87,10 +87,15 @@ nav a:hover {
     font-weight: lighter;
 }
 
+.user-icon {
+    display: flex;
+}
 
 
-
-
+.flex {
+    display:flex;
+    
+}
 
 .sidebar {
     background-color: #3498db; /* Azul */
@@ -119,7 +124,7 @@ nav a:hover {
 
 
 .list a {
-    width: 16.8vw;
+    width: 16.5vw;
     text-decoration: none;
     color: #ffffff;
     transition: color 0.3s;
@@ -167,6 +172,7 @@ footer {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     height: 140px auto;
     width: 100px auto;
+    left:60px;
     }
 
 .exitbutton{
@@ -174,7 +180,7 @@ footer {
     justify-content: center;
     align-items: center;
     border: none;
-    background-color: white ;
+    background: none ;
 }
 
 .exitbutton img {
@@ -185,7 +191,7 @@ footer {
 }
 
 .user-info {
-    width: 25px;
+    
     height: 60px;
 }
 
@@ -201,4 +207,8 @@ footer {
     width: 15px;
     height: 15px;
 
+}
+
+h6 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
