--- a/src/index/public/css/02index-biblio.css
+++ b/src/index/public/css/02index-biblio.css
@@ -78,6 +78,13 @@ nav a:hover {
 .user-ico img {
     width: 50px;
     height: 50px;
+    transition: transform 0.8s, filter 0.8s;
+
+}
+
+.user-ico img:hover {
+    transform: scale(1.05);
+    filter: brightness(1.2);
 
 }
 
@@ -110,6 +117,13 @@ nav a:hover {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size:15px;
     font-weight: lighter;
+    transition: color 0.3s;
+}
+
+.user-level:hover {
+    color: #007bffb7;
+   
+
 }
 
 .list{
@@ -165,14 +179,15 @@ footer {
 .user-info {
     display: none;
     position: absolute;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background: linear-gradient(45deg, #38434b, rgb(35, 46, 50));
+    border: 1px solid #000000;
     margin: 2.938rem 0 0 0;
     padding: 0.625rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     height: 140px auto;
     width: 100px auto;
     left:60px;
+    height: 5px;
     }
 
 .exitbutton{
@@ -181,6 +196,10 @@ footer {
     align-items: center;
     border: none;
     background: none ;
+    height: 10px;
+    color: white;
+    transition: color 0.3s;
+    
 }
 
 .exitbutton img {
@@ -190,10 +209,12 @@ footer {
     justify-content: center;
 }
 
-.user-info {
+.exitbutton:hover {
+    color: red;
     
-    height: 60px;
+
 }
+
 
 
 .login-button {
@@ -204,8 +225,8 @@ footer {
 
 .login-button img { 
     display: flex;
-    width: 15px;
-    height: 15px;
+    width: 12px;
+    height: 12px;
 
 }
 
