--- a/src/index/public/css/02index-biblio.css
+++ b/src/index/public/css/02index-biblio.css
@@ -281,7 +281,8 @@ footer {
     border-radius: 10px;
     border: solid 1px white;
     box-shadow: 0px 2px 2px 2px rgba(255, 255, 255, 0.089);
-    width: 70%;
+    
+    max-width: 40%;
     height: 100%;
     transition: box-shadow 0.3s;
     transition: all 0.8s ease;
