--- a/src/index/public/css/03tables-style.css
+++ b/src/index/public/css/03tables-style.css
@@ -51,7 +51,7 @@ ul {
   
   /* Estilo do botão de devolução */
   .devolver button {
-    background-color: rgb(39, 109, 189);
+    background-color: #325381;
     color: white;
     border: none;
     padding: 8px 16px;
