--- a/src/index/public/css/01login-registro.css
+++ b/src/index/public/css/01login-registro.css
@@ -200,7 +200,7 @@ form:hover h2 {
     margin: 0 10px;
     padding: 10px 20px;
     border: none;
-    background: #325381;
+    background: #549f66;
     color: #fff;
     border-radius: 8px;
     cursor: pointer;
@@ -258,7 +258,7 @@ form:hover h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, #54739f, #add9e4), url('public/assets/img/logo.png');
+    background: linear-gradient(45deg, #549f66, rgb(186, 228, 173)), url('public/assets/img/logo.png');
     background-size: cover; /* ou 'contain', dependendo da preferência */
     background-position: center; /* ou ajuste conforme necessário */
     z-index: -1; /* Para colocar o pseudo-elemento atrás do conteúdo da .bg */
